tests/neg-custom-args/fatal-warnings/i9168.scala
def g: Int = try 42 finally ; // error
